@@ -1,5 +1,14 @@
 2019-01-05  Tom Tromey  <tom@tromey.com>
 
+	* infrun.c (fetch_inferior_event): Use cleanup_function.
+	* utils.h (make_bpstat_clear_actions_cleanup): Don't declare.
+	* top.c (execute_command): Use cleanup_function.
+	* breakpoint.c (bpstat_do_actions): Use cleanup_function.
+	* utils.c (do_bpstat_clear_actions_cleanup)
+	(make_bpstat_clear_actions_cleanup): Remove.
+
+2019-01-05  Tom Tromey  <tom@tromey.com>
+
 	* breakpoint.c (create_breakpoint): Remove cleanup.
 
 2019-01-05  Tom Tromey  <tom@tromey.com>
